crates/ars-core/tests/ui/component_part_missing_scope.rs
use ars_core::ComponentPart;

#[derive(ComponentPart)]
enum Part {
    Root,
    Trigger,
}

fn main() {}
